<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_avatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/txt_nicholas_barbovitch"
        app:layout_constraintTop_toBottomOf="@id/img_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_hire"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottie_success.json"
        app:lottie_loop="true"
        app:layout_constraintTop_toBottomOf="@id/txt_avatar"
        app:layout_constraintBottom_toTopOf="@id/txt_choice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_choice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        android:text="@string/txt_great_choice"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/lottie_hire"
        app:layout_constraintBottom_toTopOf="@id/img_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/img_phone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic__phone"
        android:tint="@android:color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/txt_choice"
        app:layout_constraintBottom_toTopOf="@id/img_email"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="16dp"
        android:text="@string/txt_phone"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/img_phone"
        app:layout_constraintBottom_toBottomOf="@id/img_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/img_email"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_mail_outline"
        android:tint="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/img_phone"
        app:layout_constraintBottom_toTopOf="@id/img_github"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/txt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="16dp"
        android:text="@string/txt_email"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/img_email"
        app:layout_constraintBottom_toBottomOf="@id/img_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/img_github"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="64dp"
        android:src="@drawable/ic_github"
        android:tint="@android:color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/img_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/txt_github"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="16dp"
        android:text="@string/txt_github"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/img_github"
        app:layout_constraintBottom_toBottomOf="@id/img_github"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>