<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <View
        android:id="@+id/view_bottom_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/separator"
        app:layout_constraintBottom_toTopOf="@id/nav_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_load"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="lottie_loading.json"
        app:lottie_loop="true" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu_main_list" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <im.ene.toro.widget.Container
            android:id="@+id/recycler_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:context=".ui.home.mainlist.MainListFragment"
            tools:showIn="@layout/fragment_main_list" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/filter_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/hot"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/filter_top"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/top"
        android:textColor="@color/silver"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/filter_hot"
        app:layout_constraintEnd_toStartOf="@id/filter_new"
        app:layout_constraintStart_toEndOf="@id/filter_hot"
        app:layout_constraintTop_toTopOf="@+id/filter_hot" />

    <TextView
        android:id="@+id/filter_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/txt_new"
        android:textColor="@color/silver"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/filter_top"
        app:layout_constraintEnd_toStartOf="@id/filter_random"
        app:layout_constraintStart_toEndOf="@id/filter_top"
        app:layout_constraintTop_toTopOf="@+id/filter_top" />

    <TextView
        android:id="@+id/filter_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/txt_random"
        android:textColor="@color/silver"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/filter_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/filter_new"
        app:layout_constraintTop_toTopOf="@+id/filter_new" />

</androidx.constraintlayout.widget.ConstraintLayout>